app named changed

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "chatbot-app",
+    "name": "EPS Chatbot",
     "slug": "chatbot-app",
     "version": "1.0.0",
     "orientation": "portrait",
